// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrackerState default initializes the checked locations 1`] = `
{
  "Dragon Roost Cavern": {
    "Bird's Nest": false,
  },
  "Outset Island": {
    "Savage Labyrinth - Floor 30": false,
  },
}
`;

exports[`TrackerState default initializes the items 1`] = `
{
  "Bait Bag": 0,
  "Ballad of Gales": 1,
  "Beedle's Chart": 0,
  "Boat's Sail": 1,
  "Bombs": 0,
  "Boomerang": 0,
  "Cabana Deed": 0,
  "Chart for Angular Isles": 0,
  "Chart for Bird's Peak Rock": 0,
  "Chart for Boating Course": 0,
  "Chart for Bomb Island": 0,
  "Chart for Cliff Plateau Isles": 0,
  "Chart for Crescent Moon Island": 0,
  "Chart for Cyclops Reef": 0,
  "Chart for Diamond Steppe Island": 0,
  "Chart for Dragon Roost Island": 0,
  "Chart for Eastern Fairy Island": 0,
  "Chart for Eastern Triangle Island": 0,
  "Chart for Fire Mountain": 0,
  "Chart for Five-Eye Reef": 0,
  "Chart for Five-Star Isles": 0,
  "Chart for Flight Control Platform": 0,
  "Chart for Forest Haven": 0,
  "Chart for Forsaken Fortress": 0,
  "Chart for Four-Eye Reef": 0,
  "Chart for Gale Isle": 0,
  "Chart for Greatfish Isle": 0,
  "Chart for Headstone Island": 0,
  "Chart for Horseshoe Island": 0,
  "Chart for Ice Ring Isle": 0,
  "Chart for Islet of Steel": 0,
  "Chart for Mother and Child Isles": 0,
  "Chart for Needle Rock Isle": 0,
  "Chart for Northern Fairy Island": 0,
  "Chart for Northern Triangle Island": 0,
  "Chart for Outset Island": 0,
  "Chart for Overlook Island": 0,
  "Chart for Pawprint Isle": 0,
  "Chart for Private Oasis": 0,
  "Chart for Rock Spire Isle": 0,
  "Chart for Seven-Star Isles": 0,
  "Chart for Shark Island": 0,
  "Chart for Six-Eye Reef": 0,
  "Chart for Southern Fairy Island": 0,
  "Chart for Southern Triangle Island": 0,
  "Chart for Spectacle Island": 0,
  "Chart for Star Belt Archipelago": 0,
  "Chart for Star Island": 0,
  "Chart for Stone Watcher Island": 0,
  "Chart for Thorned Fairy Island": 0,
  "Chart for Three-Eye Reef": 0,
  "Chart for Tingle Island": 0,
  "Chart for Tower of the Gods": 0,
  "Chart for Two-Eye Reef": 0,
  "Chart for Western Fairy Island": 0,
  "Chart for Windfall Island": 0,
  "Command Melody": 0,
  "DRC Big Key": 0,
  "DRC Compass": 0,
  "DRC Dungeon Map": 0,
  "DRC Small Key": 0,
  "Deku Leaf": 0,
  "Delivery Bag": 0,
  "Din's Pearl": 0,
  "ET Big Key": 0,
  "ET Compass": 0,
  "ET Dungeon Map": 0,
  "ET Small Key": 0,
  "Earth God's Lyric": 0,
  "Empty Bottle": 0,
  "Entered Angular Isles Cave": 0,
  "Entered Bird's Peak Rock Cave": 0,
  "Entered Boating Course Cave": 0,
  "Entered Bomb Island Cave": 0,
  "Entered Cabana Labyrinth": 0,
  "Entered Cliff Plateau Isles Cave": 0,
  "Entered DRC": 0,
  "Entered Diamond Steppe Island Cave": 0,
  "Entered Dragon Roost Island Cave": 0,
  "Entered ET": 0,
  "Entered FF": 0,
  "Entered FW": 0,
  "Entered Fire Mountain Cave": 0,
  "Entered GT": 0,
  "Entered Horseshoe Island Cave": 0,
  "Entered Ice Ring Isle Cave": 0,
  "Entered Needle Rock Isle Cave": 0,
  "Entered Overlook Island Cave": 0,
  "Entered Pawprint Isle Chuchu Cave": 0,
  "Entered Pawprint Isle Wizzrobe Cave": 0,
  "Entered Rock Spire Isle Cave": 0,
  "Entered Savage Labyrinth": 0,
  "Entered Shark Island Cave": 0,
  "Entered Star Island Cave": 0,
  "Entered Stone Watcher Island Cave": 0,
  "Entered TotG": 0,
  "Entered WT": 0,
  "FF Compass": 0,
  "FF Dungeon Map": 0,
  "FW Big Key": 0,
  "FW Compass": 0,
  "FW Dungeon Map": 0,
  "FW Small Key": 0,
  "Farore's Pearl": 0,
  "Fill-Up Coupon": 0,
  "Ghost Ship Chart": 0,
  "Grappling Hook": 0,
  "Great Fairy Chart": 0,
  "Hero's Charm": 0,
  "Hookshot": 0,
  "Hurricane Spin": 0,
  "Iron Boots": 0,
  "Light Ring Chart": 0,
  "Maggie's Letter": 0,
  "Magic Armor": 0,
  "Moblin's Letter": 0,
  "Nayru's Pearl": 0,
  "Note to Mom": 0,
  "Octo Chart": 0,
  "Platform Chart": 0,
  "Power Bracelets": 0,
  "Progressive Bomb Bag": 0,
  "Progressive Bow": 0,
  "Progressive Magic Meter": 0,
  "Progressive Picto Box": 0,
  "Progressive Quiver": 0,
  "Progressive Shield": 1,
  "Progressive Sword": 1,
  "Progressive Wallet": 0,
  "Secret Cave Chart": 0,
  "Skull Hammer": 0,
  "Song of Passing": 1,
  "Spoils Bag": 0,
  "Submarine Chart": 0,
  "Telescope": 0,
  "Tingle Statue": 0,
  "Tingle Tuner": 0,
  "Tingle's Chart": 0,
  "TotG Big Key": 0,
  "TotG Compass": 0,
  "TotG Dungeon Map": 0,
  "TotG Small Key": 0,
  "Treasure Chart 1": 0,
  "Treasure Chart 10": 0,
  "Treasure Chart 11": 0,
  "Treasure Chart 12": 0,
  "Treasure Chart 13": 0,
  "Treasure Chart 14": 0,
  "Treasure Chart 15": 0,
  "Treasure Chart 16": 0,
  "Treasure Chart 17": 0,
  "Treasure Chart 18": 0,
  "Treasure Chart 19": 0,
  "Treasure Chart 2": 0,
  "Treasure Chart 20": 0,
  "Treasure Chart 21": 0,
  "Treasure Chart 22": 0,
  "Treasure Chart 23": 0,
  "Treasure Chart 24": 0,
  "Treasure Chart 25": 0,
  "Treasure Chart 26": 0,
  "Treasure Chart 27": 0,
  "Treasure Chart 28": 0,
  "Treasure Chart 29": 0,
  "Treasure Chart 3": 0,
  "Treasure Chart 30": 0,
  "Treasure Chart 31": 0,
  "Treasure Chart 32": 0,
  "Treasure Chart 33": 0,
  "Treasure Chart 34": 0,
  "Treasure Chart 35": 0,
  "Treasure Chart 36": 0,
  "Treasure Chart 37": 0,
  "Treasure Chart 38": 0,
  "Treasure Chart 39": 0,
  "Treasure Chart 4": 0,
  "Treasure Chart 40": 0,
  "Treasure Chart 41": 0,
  "Treasure Chart 5": 0,
  "Treasure Chart 6": 0,
  "Treasure Chart 7": 0,
  "Treasure Chart 8": 0,
  "Treasure Chart 9": 0,
  "Triforce Chart 1": 0,
  "Triforce Chart 2": 0,
  "Triforce Chart 3": 0,
  "Triforce Chart 4": 0,
  "Triforce Chart 5": 0,
  "Triforce Chart 6": 0,
  "Triforce Chart 7": 0,
  "Triforce Chart 8": 0,
  "Triforce Shard": 0,
  "WT Big Key": 0,
  "WT Compass": 0,
  "WT Dungeon Map": 0,
  "WT Small Key": 0,
  "Wind God's Aria": 0,
  "Wind Waker": 1,
  "Wind's Requiem": 1,
}
`;

exports[`TrackerState default initializes the items for locations 1`] = `
{
  "Dragon Roost Cavern": {
    "Bird's Nest": null,
  },
  "Outset Island": {
    "Savage Labyrinth - Floor 30": null,
  },
}
`;
